# Redward-Cullen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  art.txt  compile_commands.json  vcpkg.json
include/: BSE.hpp  Component.hpp  Entity.hpp  Scene.hpp  Sprite.hpp  Window.hpp  Yekate.hpp
include/Yekate/: Core.hpp  EC.hpp  ECP.hpp
include/Yekate/Core/: Component.hpp  Entity.hpp  Input.hpp  Physics.hpp  Renderer.hpp  Scene.hpp  Window.hpp  YEC.hpp  YKE.hpp
include/Yekate/EC/Components/: BoxCollider.hpp  Camera.hpp  SpriteRenderer.hpp  Transform.hpp
include/Yekate/ECP/Components/: Camera.hpp  Sprite.hpp
include/Yekate/ECP/Properties/: Transform.hpp
include/Yekate/Utility/: Time.hpp
sandbox/: main.cpp
scripts/: drun.bat  drun.sh  gen.sh  run.bat
src/: BSE.cpp  Entity.cpp  Scene.cpp  Sprite.cpp  Window.cpp
src/Core/: Entity.cpp  Input.cpp  Physics.cpp  Renderer.cpp  Scene.cpp  Window.cpp  YEC.cpp  YKE.cpp
src/EC/Components/: BoxCollider.cpp  Camera.cpp  SpriteRenderer.cpp  Transform.cpp
src/ECP/Components/: Camera.cpp  Sprite.cpp
src/Utility/: Time.cpp
